Remove default JVM arguments